--- a/templates/base.html
+++ b/templates/base.html
@@ -41,7 +41,7 @@
         <div id="topnav" class="row bg-white pt-lg-2 d-none d-lg-flex">
             <div class="col-12 col-lg-4 my-auto py-1 py-lg-0 text-center text-lg-left">
                 <a href="{% url 'home' %}" class="nav-link main-logo-link">
-                    <h2 class="nv-logo-text logo-font text-black my-0"><strong>NARTH VAD3R</strong> Merch</h2>
+                    <h2 class="nv-logo-text logo-font text-black my-1"><strong>NARTH VAD3R MERCH</strong></h2>
                 </a>
             </div>
             <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
@@ -102,7 +102,7 @@
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-nav" aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                {% include 'includes/mobile-top-header.html' %}
+                {% include 'includes/mobile-top-nav.html' %}
                 {% include 'includes/main-nav.html' %}
             </nav>
         </div>
