--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -19,8 +19,8 @@
             <div class="dropdown-menu border-0" aria-labelledby="clothing-link">
                 <a href="{% url 'products' %}?category=hoodies, jumpers" class="dropdown-item">Hoodies &amp; Jumpers</a>
                 <a href="{% url 'products' %}?category=t-shirts" class="dropdown-item">Shirts</a>
-                <a href="{% url 'products' %}?category=joggers" class="dropdown-item">Joggers</a>
-                <a href="{% url 'products' %}?category=hoodies,jumpers,t-shirts,joggers" class="dropdown-item">All Clothing</a>
+                <a href="{% url 'products' %}?category=jackets" class="dropdown-item">Jackets</a>
+                <a href="{% url 'products' %}?category=hoodies,jumpers,t-shirts,jackets" class="dropdown-item">All Clothing</a>
             </div>
         </li>
 
@@ -30,9 +30,9 @@
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="homeware-link">
                 <a href="{% url 'products' %}?category=hats" class="dropdown-item">Hats</a>
-                <a href="{% url 'products' %}?category=mugs" class="dropdown-item">Mugs</a>
-                <a href="{% url 'products' %}?category=keyrings" class="dropdown-item">Keyrings</a>
-                <a href="{% url 'products' %}?category=" class="dropdown-item">All Homeware</a>
+                <a href="{% url 'products' %}?category=mugs" class="dropdown-item">Blankets & Towels</a>
+                <a href="{% url 'products' %}?category=keyrings" class="dropdown-item">Patches</a>
+                <a href="{% url 'products' %}?category=" class="dropdown-item">All Products</a>
             </div>
         </li>
 
