--- a/templates/base.html
+++ b/templates/base.html
@@ -39,9 +39,9 @@
   <body>
     <header class="container-fluid fixed-top">
         <div id="topnav" class="row bg-white pt-lg-2 d-none d-lg-flex">
-            <div class="col-12 col-lg-4 my-auto py-1 py-lg-0 text-center text-lg-left">
+            <div class="col-12 col-lg-4 my-auto py-1 py-lg-0 text-center">
                 <a href="{% url 'home' %}" class="nav-link main-logo-link">
-                    <h2 class="nv-logo-text logo-font text-black my-1"><strong>NARTH VAD3R MERCH</strong></h2>
+                    <h2 class="nv-logo-text logo-font my-1"><strong>NARTH VAD3R MERCH</strong></h2>
                 </a>
             </div>
             <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
