--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -17,7 +17,7 @@
                 Clothing
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="clothing-link">
-                <a href="{% url 'products' %}?category=hoodies, jumpers" class="dropdown-item">Hoodies &amp; Jumpers</a>
+                <a href="{% url 'products' %}?category=pullovers" class="dropdown-item">Hoodies &amp; Jumpers</a>
                 <a href="{% url 'products' %}?category=t-shirts" class="dropdown-item">Shirts</a>
                 <a href="{% url 'products' %}?category=jackets" class="dropdown-item">Jackets</a>
                 <a href="{% url 'products' %}?category=hoodies,jumpers,t-shirts,jackets" class="dropdown-item">All Clothing</a>
@@ -30,19 +30,9 @@
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="homeware-link">
                 <a href="{% url 'products' %}?category=hats" class="dropdown-item">Hats</a>
-                <a href="{% url 'products' %}?category=mugs" class="dropdown-item">Blankets & Towels</a>
-                <a href="{% url 'products' %}?category=keyrings" class="dropdown-item">Patches</a>
-                <a href="{% url 'products' %}?category=" class="dropdown-item">All Products</a>
-            </div>
-        </li>
-
-        <li class="nav-item dropdown">
-            <a class="logo-font font-weight-bold nav-link text-black" href="#" id="specials-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Special Offers
-            </a>
-            <div class="dropdown-menu border-0" aria-labelledby="specials-link">
-                <a href="{% url 'products' %}?category=new_arrivals" class="dropdown-item">New Arrivals</a>
-                <a href="{% url 'products' %}?category=deals" class="dropdown-item">Deals</a>
+                <a href="{% url 'products' %}?category=blankets_towels" class="dropdown-item">Blankets & Towels</a>
+                <a href="{% url 'products' %}?category=accessories" class="dropdown-item">Bits & Bobs</a>
+                <a href="{% url 'products' %}?category=hats,blankets_towels,accessories" class="dropdown-item">All Products</a>
             </div>
         </li>
     </ul>
