--- a/templates/base.html
+++ b/templates/base.html
@@ -38,30 +38,13 @@
   </head>
   <body>
     <header class="container-fluid fixed-top">
-        <div id="topnav" class="row bg-white pt-lg-2 d-none d-lg-flex">
-            <div class="col-12 col-lg-4 my-auto py-1 py-lg-0 text-center">
-                <a href="{% url 'home' %}" class="nav-link main-logo-link">
-                    <h2 class="nv-logo-text logo-font my-1"><strong>NARTH VAD3R MERCH</strong></h2>
-                </a>
-            </div>
-            <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
-                <form method="GET" action="{% url 'products' %}">
-                    <div class="input-group w-100">
-                        <input class="form-control border border-black rounded-0" type="text" name="q" placeholder="Looking for something?">
-                        <div class="input-group-append">
-                            <button class="form-control btn btn-black border border-black rounded-0" type="submit">
-                                <span class="icon">
-                                    <i class="fas fa-search"></i>
-                                </span>
-                            </button>
-                        </div>
-                    </div>
-                </form>
-            </div>
-            <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
-                <ul class="list-inline list-unstyled text-center text-lg-right my-0">
+        <div id="topnav" class="row bg-black pt-lg-2 d-flex align-items-center">
+            
+            <!-- Left: My Account -->
+            <div class="col-4 d-flex justify-content-start align-items-center">
+                <ul class="list-inline list-unstyled mb-0">
                     <li class="list-inline-item dropdown">
-                        <a class="text-black nav-link" href="#" id="user-options" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <a class="account-icon text-red nav-link" href="#" id="user-options" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             <div class="text-center">
                                 <div><i class="fas fa-user fa-lg"></i></div>
                                 <p class="my-0">My Account</p>
@@ -80,21 +63,50 @@
                             {% endif %}
                         </div>
                     </li>
-                    <li class="list-inline-item">
-                        <a class="{% if grand_total %}text-info font-weight-bold{% else %}text-black{% endif %} nav-link" href="{% url 'view_basket' %}">
-                            <div class="text-center">
-                                <div><i class="fas fa-shopping-bag fa-lg"></i></div>
-                                <p class="my-0">
-                                    {% if grand_total %}
-                                        £{{ grand_total|floatformat:2 }}
-                                    {% else %}
-                                        £0.00
-                                    {% endif %}
-                                </p>
-                            </div>
-                        </a>
-                    </li>
                 </ul>
+            </div>
+            
+            <!-- Center: Logo -->
+            <div class="col-4 d-flex justify-content-center align-items-center">
+                <a href="{% url 'home' %}" class="nav-link main-logo-link">
+                    <h2 class="nv-logo-text my-1 text-center"><strong>NARTH VAD3R MERCH</strong></h2>
+                </a>
+            </div>
+            
+            <!-- Right: Basket -->
+            <div class="col-4 d-flex justify-content-end align-items-center">
+                <a class="{% if grand_total %}text-info font-weight-bold{% else %}text-red{% endif %} nav-link" href="{% url 'view_basket' %}">
+                    <div class="text-center">
+                        <div><i class="fas fa-shopping-bag fa-lg"></i></div>
+                        <p class="my-0">
+                            {% if grand_total %}
+                                £{{ grand_total|floatformat:2 }}
+                            {% else %}
+                                £0.00
+                            {% endif %}
+                        </p>
+                    </div>
+                </a>
+            </div>
+        </div>
+        
+        <!-- Search Bar: Centered with col-4 on large screens and col-10 on smaller screens -->
+        <div class="row bg-black py-2">
+            <div class="col-12 d-flex justify-content-center">
+                <div class="col-10 col-md-4">
+                    <form method="GET" action="{% url 'products' %}" class="w-100">
+                        <div class="input-group">
+                            <input class="form-control border border-black rounded-0" type="text" name="q" placeholder="Looking for something?">
+                            <div class="input-group-append">
+                                <button class="form-control btn btn-red border border-red rounded-3" type="submit">
+                                    <span class="icon">
+                                        <i class="fas fa-search"></i>
+                                    </span>
+                                </button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
             </div>
         </div>
         <div class="row bg-white">
