--- a/templates/base.html
+++ b/templates/base.html
@@ -2,158 +2,143 @@
 
 <!doctype html>
 <html lang="en">
-  <head>
-
+<head>
     {% block meta %}
-        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     {% endblock %}
 
-    {% block extra_meta %}
-    {% endblock %}
+    {% block extra_meta %}{% endblock %}
 
     {% block corecss %}
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" 
+              integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato&display=swap">
         <link rel="stylesheet" href="{% static 'css/base.css' %}">
     {% endblock %}
 
-    {% block extra_css %}
-    {% endblock %}
+    {% block extra_css %}{% endblock %}
 
     {% block corejs %}
         <script src="https://kit.fontawesome.com/e9c73d7092.js" crossorigin="anonymous"></script>
-        <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-        <!-- Stripe -->
+        <script src="https://code.jquery.com/jquery-3.4.1.min.js" 
+                integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" 
+                integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" 
+                integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
         <script src="https://js.stripe.com/v3/"></script>
     {% endblock %}
 
-    {% block extra_js %}
-    {% endblock %}
+    {% block extra_js %}{% endblock %}
 
     <title>NARTH VAD3R MERCH {% block extra_title %}{% endblock %}</title>
-  </head>
-  <body>
-    <header class="container-fluid fixed-top">
-        <div id="topnav" class="row bg-black pt-lg-2 d-flex align-items-center">
-            
-            <!-- Left: My Account -->
-            <div class="col-4 d-flex justify-content-start align-items-center">
-                <ul class="list-inline list-unstyled mb-0">
-                    <li class="list-inline-item dropdown">
-                        <a class="account-icon text-red nav-link" href="#" id="user-options" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            <div class="text-center">
-                                <div><i class="fas fa-user fa-lg"></i></div>
-                                <p class="my-0">My Account</p>
-                            </div>
-                        </a>
-                        <div class="dropdown-menu border-0" aria-labelledby="user-options">
-                            {% if request.user.is_authenticated %}
-                                {% if request.user.is_superuser %}
-                                    <a href="" class="dropdown-item">Merch Management</a>
-                                {% endif %}
-                                <a href="{% url 'profile' %}" class="dropdown-item">My Profile</a>
-                                <a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
-                            {% else %}
-                                <a href="{% url 'account_signup' %}" class="dropdown-item">Register</a>
-                                <a href="{% url 'account_login' %}" class="dropdown-item">Login</a>
-                            {% endif %}
+</head>
+<body>
+<header class="container-fluid fixed-top">
+    <!-- Top Navbar -->
+    <div id="topnav" class="row bg-black py-lg-2 d-flex align-items-center">
+        <!-- Left: My Account -->
+        <div class="col-4 d-flex justify-content-start align-items-center">
+            <ul class="list-inline list-unstyled mb-0">
+                <li class="list-inline-item dropdown">
+                    <a class="account-icon text-red nav-link" href="#" id="user-options" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <div class="text-center">
+                            <div><i class="fas fa-user fa-lg"></i></div>
+                            <p class="my-0">My Account</p>
                         </div>
-                    </li>
-                </ul>
-            </div>
-            
-            <!-- Center: Logo -->
-            <div class="col-4 d-flex justify-content-center align-items-center">
-                <a href="{% url 'home' %}" class="nav-link main-logo-link">
-                    <h2 class="nv-logo-text my-1 text-center"><strong>NARTH VAD3R MERCH</strong></h2>
-                </a>
-            </div>
-            
-            <!-- Right: Basket -->
-            <div class="col-4 d-flex justify-content-end align-items-center">
-                <a class="{% if grand_total %}text-info font-weight-bold{% else %}text-red{% endif %} nav-link" href="{% url 'view_basket' %}">
-                    <div class="text-center">
-                        <div><i class="fas fa-shopping-bag fa-lg"></i></div>
-                        <p class="my-0">
-                            {% if grand_total %}
-                                £{{ grand_total|floatformat:2 }}
-                            {% else %}
-                                £0.00
+                    </a>
+                    <div class="dropdown-menu border-0" aria-labelledby="user-options">
+                        {% if request.user.is_authenticated %}
+                            {% if request.user.is_superuser %}
+                                <a href="" class="dropdown-item">Merch Management</a>
                             {% endif %}
-                        </p>
+                            <a href="{% url 'profile' %}" class="dropdown-item">My Profile</a>
+                            <a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
+                        {% else %}
+                            <a href="{% url 'account_signup' %}" class="dropdown-item">Register</a>
+                            <a href="{% url 'account_login' %}" class="dropdown-item">Login</a>
+                        {% endif %}
                     </div>
-                </a>
-            </div>
+                </li>
+            </ul>
         </div>
-        
-        <!-- Search Bar: Centered with col-4 on large screens and col-10 on smaller screens -->
-        <div class="row bg-black py-2">
-            <div class="col-12 d-flex justify-content-center">
-                <div class="col-10 col-md-4">
-                    <form method="GET" action="{% url 'products' %}" class="w-100">
-                        <div class="input-group">
-                            <input class="form-control border border-black rounded-0" type="text" name="q" placeholder="Looking for something?">
-                            <div class="input-group-append">
-                                <button class="form-control btn btn-red border border-red rounded-3" type="submit">
-                                    <span class="icon">
-                                        <i class="fas fa-search"></i>
-                                    </span>
-                                </button>
-                            </div>
-                        </div>
-                    </form>
+
+        <!-- Center: Logo -->
+        <div class="col-4 text-center">
+            <a href="{% url 'home' %}" class="nav-link main-logo-link">
+                <h2 class="nv-logo-text text-center text-red my-1"><strong>NARTH VAD3R MERCH</strong></h2>
+            </a>
+        </div>
+
+        <!-- Right: Basket -->
+        <div class="col-4 text-right">
+            <a class="{% if grand_total %}text-info font-weight-bold{% else %}text-red{% endif %} nav-link" href="{% url 'view_basket' %}">
+                <div class="text-center">
+                    <div><i class="fas fa-shopping-bag fa-lg"></i></div>
+                    <p class="my-0">
+                        {% if grand_total %}
+                            £{{ grand_total|floatformat:2 }}
+                        {% else %}
+                            £0.00
+                        {% endif %}
+                    </p>
                 </div>
-            </div>
+            </a>
         </div>
-        <div class="row bg-white">
-            <nav class="navbar navbar-expand-lg navbar-dark w-100">
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-nav" aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                {% include 'includes/main-nav.html' %}
-            </nav>
+    </div>
+
+    <!-- Search Bar -->
+    <div class="row bg-black py-2">
+        <div class="col-12 text-center">
+            <form method="GET" action="{% url 'products' %}" class="w-100">
+                <div class="input-group col-10 col-md-4 mx-auto">
+                    <input class="form-control border-black rounded-0" type="text" name="q" placeholder="Looking for something?">
+                    <div class="input-group-append">
+                        <button class="form-control btn btn-red border-red rounded-0" type="submit">
+                            <span><i class="fas fa-search"></i></span>
+                        </button>
+                    </div>
+                </div>
+            </form>
         </div>
-        <div id="delivery-banner" class="row text-center">
-            <div class="col bg-black text-white">
-                <h4 class="logo-font my-1">Free delivery in UK on orders over £{{ free_delivery_threshold }}!</h4>                
-            </div>            
-        </div>
-    </header>
+    </div>
 
-    {% if messages %}
-        <div class="message-container">
-            {% for message in messages %}
-                {% with message.level as level %}
-                    {% if level == 40 %}
-                        {% include 'includes/toasts/toast_error.html' %}
-                    {% elif level == 30 %}
-                        {% include 'includes/toasts/toast_warning.html' %}
-                    {% elif level == 25 %}
-                        {% include 'includes/toasts/toast_success.html' %}
-                    {% else %}
-                        {% include 'includes/toasts/toast_info.html' %}
-                    {% endif %}
-                {% endwith %}
-            {% endfor %}
-        </div>
-    {% endif %}
+    <!-- Main Navigation -->
+    <div class="row bg-white">
+        <nav class="navbar navbar-expand-lg navbar-dark w-100">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-nav" aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            {% include 'includes/main-nav.html' %}
+        </nav>
+    </div>
 
-    {% block page_header %}
-    {% endblock %}
+    <!-- Delivery Banner -->
+    <div id="delivery-banner" class="row text-center">
+        <div class="col bg-black text-white">
+            <h4 class="logo-font my-1">Free delivery in UK on orders over £{{ free_delivery_threshold }}!</h4>                
+        </div>            
+    </div>
+</header>
 
-    {% block content %}
-    {% endblock %}
+{% if messages %}
+    <div class="message-container">
+        {% for message in messages %}
+            {% include 'includes/toasts/toast_{{ message.tags }}.html' %}
+        {% endfor %}
+    </div>
+{% endif %}
 
-    {% block postloadjs %}
-    <script type="text/javascript">
+<main class="container-fluid pt-5">
+    {% block content %}{% endblock %}
+</main>
+
+{% block postloadjs %}
+    <script>
         $('.toast').toast('show');
     </script>
-    {% endblock %}
-
-    
-  </body>
+{% endblock %}
+</body>
 </html>
