--- a/templates/base.html
+++ b/templates/base.html
@@ -21,7 +21,7 @@
     {% block extra_css %}{% endblock %}
 
     {% block corejs %}
-        <script src="https://kit.fontawesome.com/e9c73d7092.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/7a366bbe0a.js" crossorigin="anonymous"></script>
         <script src="https://code.jquery.com/jquery-3.4.1.min.js" 
                 integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" 
@@ -36,89 +36,109 @@
     <title>NARTH VAD3R MERCH {% block extra_title %}{% endblock %}</title>
 </head>
 <body>
-<header class="container-fluid fixed-top">
-    <!-- Top Navbar -->
-    <div id="topnav" class="row bg-black py-lg-2 d-flex align-items-center">
-        <!-- Left: My Account -->
-        <div class="col-4 d-flex justify-content-start align-items-center">
-            <ul class="list-inline list-unstyled mb-0">
-                <li class="list-inline-item dropdown">
-                    <a class="account-icon text-red nav-link" href="#" id="user-options" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        <div class="text-center">
-                            <div><i class="fas fa-user fa-lg"></i></div>
-                            <p class="my-0">My Account</p>
-                        </div>
-                    </a>
-                    <div class="dropdown-menu border-0" aria-labelledby="user-options">
-                        {% if request.user.is_authenticated %}
-                            {% if request.user.is_superuser %}
-                                <a href="" class="dropdown-item">Merch Management</a>
+    <header class="container-fluid fixed-top">
+        <!-- Top Navbar -->
+        <div id="topnav" class="row bg-black py-lg-2 d-flex align-items-center">
+            <!-- Left: My Account -->
+            <div class="col-1 col-sm-3 d-flex justify-content-start text-center align-items-center">
+                <ul class="list-inline list-unstyled mb-0">
+                    <li class="list-inline-item dropdown">
+                        <a class="account-icon text-red nav-link" href="#" id="user-options" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            <div class="text-center">
+                                <!-- Account Icon -->
+                                <i class="fa-solid fa-user-group"></i>
+                            </div>
+                            <p class="my-0 d-none d-sm-block">My Account</p> <!-- Default visible text -->
+                            <p class="my-0 d-block d-sm-none small">My Account</p> <!-- Smaller text for mobile -->
+                        </a>
+                        <div class="dropdown-menu border-0" aria-labelledby="user-options">
+                            {% if request.user.is_authenticated %}
+                                {% if request.user.is_superuser %}
+                                    <a href="" class="dropdown-item">Merch Management</a>
+                                {% endif %}
+                                <a href="{% url 'profile' %}" class="dropdown-item">My Profile</a>
+                                <a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
+                            {% else %}
+                                <a href="{% url 'account_signup' %}" class="dropdown-item">Register</a>
+                                <a href="{% url 'account_login' %}" class="dropdown-item">Login</a>
                             {% endif %}
-                            <a href="{% url 'profile' %}" class="dropdown-item">My Profile</a>
-                            <a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
-                        {% else %}
-                            <a href="{% url 'account_signup' %}" class="dropdown-item">Register</a>
-                            <a href="{% url 'account_login' %}" class="dropdown-item">Login</a>
-                        {% endif %}
-                    </div>
-                </li>
-            </ul>
-        </div>
+                        </div>
+                    </li>
+                </ul>
+            </div>
 
-        <!-- Center: Logo -->
-        <div class="col-4 text-center">
-            <a href="{% url 'home' %}" class="nav-link main-logo-link">
-                <h2 class="nv-logo-text text-center text-red my-1"><strong>NARTH VAD3R MERCH</strong></h2>
-            </a>
-        </div>
+           <!-- Center: Logo -->
+            <div class="col-10 col-sm-6 mx-auto text-center d-flex justify-content-center align-items-center">
+                <a href="{% url 'home' %}" class="nav-link main-logo-link">
+                    <h2 class="nv-logo-text text-red my-1">
+                        <!-- Responsive Logo Sizes -->
+                        <strong class="d-block d-sm-none" style="font-size: 1rem;">NARTH VAD3R MERCH</strong> <!-- Smallest logo for mobile -->
+                        <strong class="d-none d-sm-block d-md-none" style="font-size: 1.6rem;">NARTH VAD3R MERCH</strong> <!-- Medium logo for tablets -->
+                        <strong class="d-none d-md-block" style="font-size: 2rem;">NARTH VAD3R MERCH</strong> <!-- Default larger logo -->
+                    </h2>
+                </a>
+            </div>
 
-        <!-- Right: Basket -->
-        <div class="col-4 text-right">
-            <a class="{% if grand_total %}text-info font-weight-bold{% else %}text-red{% endif %} nav-link" href="{% url 'view_basket' %}">
-                <div class="text-center">
-                    <div><i class="fas fa-shopping-bag fa-lg"></i></div>
-                    <p class="my-0">
+            
+
+            <!-- Right: Basket -->
+            <div class="col-1 col-sm-3 d-flex justify-content-end align-items-center">
+                <a class="{% if grand_total %}text-info font-weight-bold{% else %}text-red{% endif %} nav-link basket-icon d-flex flex-column align-items-center" href="{% url 'view_basket' %}">
+                    <!-- Basket Icon -->
+                    <i class="fa-solid fa-bag-shopping"></i>
+                    <p class="my-0 text-center">
                         {% if grand_total %}
                             £{{ grand_total|floatformat:2 }}
                         {% else %}
                             £0.00
                         {% endif %}
                     </p>
-                </div>
-            </a>
-        </div>
-    </div>
+                </a>
+            </div>
+        </div>        
+        
+        <!-- Search Bar Below Header -->
+        <div class="row bg-black py-1 mt-2"> <!-- Adjusted mt-5 to avoid overlapping -->
+            <div class="col-12 text-center">
+                <form method="GET" action="{% url 'products' %}" class="w-100">
+                    <div class="input-group col-10 col-md-4 mx-auto search-icon">
+                        <input class="form-control border-black rounded-0" type="text" name="q" placeholder="Looking for something?">
+                        <div class="input-group-append">
+                            <button class="form-control btn btn-red border-red rounded-0" type="submit">
+                                <i class="fa-brands fa-searchengin"></i>
+                            </button>
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div> 
 
-    <!-- Search Bar -->
-    <div class="row bg-black py-2">
-        <div class="col-12 text-center">
-            <form method="GET" action="{% url 'products' %}" class="w-100">
-                <div class="input-group col-10 col-md-4 mx-auto">
-                    <input class="form-control border-black rounded-0" type="text" name="q" placeholder="Looking for something?">
-                    <div class="input-group-append">
-                        <button class="form-control btn btn-red border-red rounded-0" type="submit">
-                            <span><i class="fas fa-search"></i></span>
-                        </button>
+        <!-- Main Navigation -->
+        <!-- Mobile Navbar -->
+        <div class="row bg-black">
+            <nav class="navbar navbar-expand-lg navbar-dark w-100">
+                <button class="navbar-toggler mx-auto mt-3" type="button" data-toggle="collapse" data-target="#main-nav" aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="d-none d-lg-none d-md-none d-sm-flex w-100 text-center justify-content-center align-items-center">
+                    <div class="d-flex flex-column align-items-center justify-content-center">
+                        {% include 'includes/mobile-top-header.html' %}
                     </div>
                 </div>
-            </form>
+            </nav>
         </div>
-    </div>
 
-    <!-- Main Navigation -->
-    <div class="row bg-white">
-        <nav class="navbar navbar-expand-lg navbar-dark w-100">
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-nav" aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            {% include 'includes/main-nav.html' %}
-        </nav>
-    </div>
+        <div class="row bg-black">
+            <nav class="navbar navbar-expand-lg navbar-dark w-100">
+                {% include 'includes/main-nav.html' %}
+            </nav>
+        </div>
+    
 
     <!-- Delivery Banner -->
     <div id="delivery-banner" class="row text-center">
         <div class="col bg-black text-white">
-            <h4 class="logo-font my-1">Free delivery in UK on orders over £{{ free_delivery_threshold }}!</h4>                
+            <h4 class="logo-font">Free delivery in UK on orders over £{{ free_delivery_threshold }}!</h4>                
         </div>            
     </div>
 </header>
@@ -126,10 +146,13 @@
 {% if messages %}
     <div class="message-container">
         {% for message in messages %}
-            {% include 'includes/toasts/toast_{{ message.tags }}.html' %}
+            {% with 'includes/toasts/toast_'|add:message.tags|add:'.html' as toast_template %}
+                {% include toast_template %}
+            {% endwith %}
         {% endfor %}
     </div>
 {% endif %}
+
 
 <main class="container-fluid pt-5">
     {% block content %}{% endblock %}
