--- a/templates/base.html
+++ b/templates/base.html
@@ -154,7 +154,7 @@
 {% endif %}
 
 
-<main class="container-fluid pt-5">
+<main class="container-fluid mt-5 pt-5">
     {% block content %}{% endblock %}
 </main>
 
