--- a/static/css/base.css
+++ b/static/css/base.css
@@ -553,8 +553,8 @@ input[name='q']::placeholder {
 /* ------ Allauth form formatting ------ */
 
 .allauth-form-inner-content p {
-    margin-top: 1.5rem; /* mt-4 */
-    color: #6c757d; /* text-secondary */
+    margin-top: 1.5rem;
+    color: #6c757d; 
 }
 
 .allauth-form-inner-content input {
@@ -566,13 +566,16 @@ input[name='q']::placeholder {
     display: none;
 }
 
+.allauth-form-inner-content.bg-black {
+    background-color: #000;
+    color: #fff;
+
 .allauth-form-inner-content input::placeholder {
-    color: #aab7c4;
+    color: #ff9419;
 }
 
 .allauth-form-inner-content button,
 .allauth-form-inner-content input[type='submit'] {
-	/* btn */
 	display: inline-block;
     font-weight: 400;
     color: #fff;
@@ -582,8 +585,8 @@ input[name='q']::placeholder {
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
-    background-color: #000;
-    border: 1px solid #000;
+    background-color: #ff0000;
+    border: 1px solid #d10000;
     padding: .375rem .75rem;
     font-size: 1rem;
     line-height: 1.5;
@@ -596,12 +599,14 @@ input[name='q']::placeholder {
 .allauth-form-inner-content button:hover,
 .allauth-form-inner-content input[type='submit']:hover {	
 	color: #fff;
-    background-color: #222;
-    border-color: #222;
+    background-color: #ffffff;
+    border-color: #ff0000;
 }
 
 .allauth-form-inner-content a {
-	color: #17a2b8; /* text-info */
+	color: #ff0000;
+    position: relative;
+    z-index: 2;
 }
 
 /* --------- Media Queries ---------*/
