--- a/templates/allauth/account/base.html
+++ b/templates/allauth/account/base.html
@@ -1,11 +1,11 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <div class="container header-container">
+    <div class="container header-container py-5">
         <div class="overlay"></div>
-        <div class="row">
-            <div class="col-6">
-                <div class="allauth-form-inner-content">
+        <div class="row justify-content-center">
+            <div class="col-12 col-md-6">
+                <div class="allauth-form-inner-content bg-black p-4 rounded-lg shadow-lg">
                     {% block inner_content %}
                     {% endblock %}
                 </div>
