--- a/templates/allauth/account/password_reset_done.html
+++ b/templates/allauth/account/password_reset_done.html
@@ -1,4 +1,4 @@
-{% extends "account/base.html" %}
+{% extends "base.html" %}
 
 {% load i18n %}
 {% load account %}
@@ -6,11 +6,26 @@
 {% block head_title %}{% trans "Password Reset" %}{% endblock %}
 
 {% block content %}
-    <h1>{% trans "Password Reset" %}</h1>
-    
-    {% if user.is_authenticated %}
-    {% include "account/snippets/already_logged_in.html" %}
-    {% endif %}
-    
-    <p>{% blocktrans %}We have sent you an e-mail. If you have not received it please check your spam folder. Otherwise contact us if you do not receive it in a few minutes.{% endblocktrans %}</p>
+    <div class="container header-container py-5">
+        <div class="overlay"></div>
+        <div class="row justify-content-center">
+            <div class="col-12 col-md-6">
+                <div class="allauth-form-inner-content bg-dark text-white p-5 rounded-lg shadow-lg">
+                    <hr>
+                    <h2 class="logo-font mb-4 text-danger">{% trans "Password Reset" %}</h2>
+                    <hr>
+
+                    {% if user.is_authenticated %}
+                        {% include "account/snippets/already_logged_in.html" %}
+                    {% endif %}
+
+                    <p class="text-white">{% blocktrans %}We have sent you an e-mail. If you have not received it please check your spam folder. Otherwise contact us if you do not receive it in a few minutes.{% endblocktrans %}</p>
+                    
+                    <div class="d-flex flex-column align-items-center mt-4">
+                        <a class="btn btn-outline-danger rounded-0" href="{% url 'account_login' %}">{% trans "Go to Login" %}</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 {% endblock %}
