--- a/templates/allauth/account/password_reset_from_key.html
+++ b/templates/allauth/account/password_reset_from_key.html
@@ -1,19 +1,36 @@
-{% extends "account/base.html" %}
+{% extends "base.html" %}
 
 {% load i18n %}
 {% block head_title %}{% trans "Change Password" %}{% endblock %}
 
 {% block content %}
-    <h1>{% if token_fail %}{% trans "Bad Token" %}{% else %}{% trans "Change Password" %}{% endif %}</h1>
+    <div class="container header-container py-5">
+        <div class="overlay"></div>
+        <div class="row justify-content-center">
+            <div class="col-12 col-md-6">
+                <div class="allauth-form-inner-content bg-dark text-white p-5 rounded-lg shadow-lg">
+                    <hr>
+                    <h2 class="logo-font mb-4 text-danger">
+                        {% if token_fail %}
+                            {% trans "Bad Token" %}
+                        {% else %}
+                            {% trans "Change Password" %}
+                        {% endif %}
+                    </h2>
+                    <hr>
 
-    {% if token_fail %}
-        {% url 'account_reset_password' as passwd_reset_url %}
-        <p>{% blocktrans %}The password reset link was invalid, possibly because it has already been used.  Please request a <a href="{{ passwd_reset_url }}">new password reset</a>.{% endblocktrans %}</p>
-    {% else %}
-        <form method="POST" action="{{ action_url }}">
-            {% csrf_token %}
-            {{ form.as_p }}
-            <input type="submit" name="action" value="{% trans 'change password' %}"/>
-        </form>
-    {% endif %}
+                    {% if token_fail %}
+                        {% url 'account_reset_password' as passwd_reset_url %}
+                        <p class="text-white">{% blocktrans %}The password reset link was invalid, possibly because it has already been used.  Please request a <a href="{{ passwd_reset_url }}" class="text-info">{% trans 'new password reset' %}</a>.{% endblocktrans %}</p>
+                    {% else %}
+                        <form method="POST" action="{{ action_url }}" class="password_change">
+                            {% csrf_token %}
+                            {{ form.as_p }}
+                            <button type="submit" name="action" class="btn btn-danger w-100">{% trans "Change Password" %}</button>
+                        </form>
+                    {% endif %}
+                </div>
+            </div>
+        </div>
+    </div>
 {% endblock %}
