--- a/templates/allauth/account/password_reset_from_key_done.html
+++ b/templates/allauth/account/password_reset_from_key_done.html
@@ -1,9 +1,25 @@
-{% extends "account/base.html" %}
+{% extends "base.html" %}
 
 {% load i18n %}
 {% block head_title %}{% trans "Change Password" %}{% endblock %}
 
 {% block content %}
-    <h1>{% trans "Change Password" %}</h1>
-    <p>{% trans 'Your password is now changed.' %}</p>
+    <div class="container header-container py-5">
+        <div class="overlay"></div>
+        <div class="row justify-content-center">
+            <div class="col-12 col-md-6">
+                <div class="allauth-form-inner-content bg-dark text-white p-5 rounded-lg shadow-lg">
+                    <hr>
+                    <h2 class="logo-font mb-4 text-danger">{% trans "Change Password" %}</h2>
+                    <hr>
+
+                    <p class="text-white">{% trans 'Your password is now changed.' %}</p>
+
+                    <div class="d-flex flex-column align-items-center mt-4">
+                        <a class="btn btn-outline-danger rounded-0" href="{% url 'account_login' %}">{% trans "Go to Login" %}</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 {% endblock %}
