--- a/templates/allauth/account/password_set.html
+++ b/templates/allauth/account/password_set.html
@@ -1,15 +1,25 @@
-{% extends "account/base.html" %}
+{% extends "base.html" %}
 
 {% load i18n %}
-
 {% block head_title %}{% trans "Set Password" %}{% endblock %}
 
 {% block content %}
-    <h1>{% trans "Set Password" %}</h1>
+    <div class="container header-container py-5">
+        <div class="overlay"></div>
+        <div class="row justify-content-center">
+            <div class="col-12 col-md-6">
+                <div class="allauth-form-inner-content bg-dark text-white p-5 rounded-lg shadow-lg">
+                    <hr>
+                    <h2 class="logo-font mb-4 text-danger">{% trans "Set Password" %}</h2>
+                    <hr>
 
-    <form method="POST" action="{% url 'account_set_password' %}" class="password_set">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <input type="submit" name="action" value="{% trans 'Set Password' %}"/>
-    </form>
+                    <form method="POST" action="{% url 'account_set_password' %}" class="password_set">
+                        {% csrf_token %}
+                        {{ form.as_p }}
+                        <button type="submit" class="btn btn-danger w-100">{% trans 'Set Password' %}</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
 {% endblock %}
