--- a/templates/allauth/account/signup.html
+++ b/templates/allauth/account/signup.html
@@ -1,24 +1,32 @@
-{% extends "account/base.html" %}
+{% extends "base.html" %}
 
 {% load i18n %}
 
 {% block head_title %}{% trans "Signup" %}{% endblock %}
 
-{% block inner_content %}
-<hr>
-<h2 class="logo-font mb-4">{% trans "Sign Up" %}</h2>
-<hr>
+{% block content %}
+    <div class="container header-container py-5">
+        <div class="overlay"></div>
+        <div class="row justify-content-center">
+            <div class="col-12 col-md-6">
+                <div class="allauth-form-inner-content bg-black text-white p-5 rounded-lg shadow-lg">
+                    <hr>
+                    <h2 class="logo-font mb-4 text-danger">Sign Up</h2>
+                    <hr>
 
-<p>{% blocktrans %}Already have an account? Then please <a href="{{ login_url }}">sign in</a>.{% endblocktrans %}</p>
+                    <p class="text-white">{% blocktrans %}Already have an account? Then please <a href="{{ login_url }}" class="text-info">sign in</a>.{% endblocktrans %}</p>
 
-<form class="signup" id="signup_form" method="post" action="{% url 'account_signup' %}">
-  {% csrf_token %}
-  {{ form|crispy }}
-  {% if redirect_field_value %}
-  <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
-  {% endif %}
-  <a class="btn btn-outline-black rounded-0" href="{% url 'account_login' %}">Back to Login</a>
-  <button type="submit">{% trans "Sign Up" %}</button>
-</form>
-
+                    <form class="signup" id="signup_form" method="post" action="{% url 'account_signup' %}">
+                        {% csrf_token %}
+                        {{ form|crispy }}
+                        {% if redirect_field_value %}
+                            <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
+                        {% endif %}
+                        <a class="btn btn-outline-black rounded-0" href="{% url 'account_login' %}">{% trans "Back to Login" %}</a>
+                        <button type="submit" class="btn btn-danger mt-3">{% trans "Sign Up" %}</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
 {% endblock %}
