--- a/templates/allauth/account/verification_sent.html
+++ b/templates/allauth/account/verification_sent.html
@@ -1,12 +1,23 @@
-{% extends "account/base.html" %}
+{% extends "base.html" %}
 
 {% load i18n %}
 
 {% block head_title %}{% trans "Verify Your E-mail Address" %}{% endblock %}
 
 {% block content %}
-    <h1>{% trans "Verify Your E-mail Address" %}</h1>
+    <div class="container header-container py-5">
+        <div class="overlay"></div>
+        <div class="row justify-content-center">
+            <div class="col-12 col-md-6">
+                <div class="allauth-form-inner-content bg-black text-white p-5 rounded-lg shadow-lg">
+                    <hr>
+                    <h1 class="logo-font mb-4 text-danger">{% trans "Verify Your E-mail Address" %}</h1>
+                    <hr>
 
-    <p>{% blocktrans %}We have sent an e-mail to you for verification. Follow the link provided to finalize the signup process. If you do not see the verification e-mail in your main inbox, check your spam folder. Please contact us if you do not receive the verification e-mail within a few minutes.{% endblocktrans %}</p>
+                    <p class="text-white">{% blocktrans %}We have sent an e-mail to you for verification. Follow the link provided to finalize the signup process. If you do not see the verification e-mail in your main inbox, check your spam folder. Please contact us if you do not receive the verification e-mail within a few minutes.{% endblocktrans %}</p>
 
+                </div>
+            </div>
+        </div>
+    </div>
 {% endblock %}
