Added footer and stylings to base.html and base.css aswell as editind css for card boday and footers

--- a/templates/base.html
+++ b/templates/base.html
@@ -35,7 +35,7 @@
 
     <title>NARTH VAD3R MERCH {% block extra_title %}{% endblock %}</title>
 </head>
-<body>
+<body class="container-fluid mt-5 pt-5" style="padding-bottom: 100px;" id="top">
     <header class="container-fluid fixed-top">
         <!-- Top Navbar -->
         <div id="topnav" class="row bg-black py-lg-2 d-flex align-items-center">
@@ -162,6 +162,29 @@
     <script>
         $('.toast').toast('show');
     </script>
+    <script>
+        window.onscroll = function() {
+            if (document.body.scrollTop > 100 || document.documentElement.scrollTop > 100) {
+                document.getElementById("back-to-top").style.display = "block";
+            } else {
+                document.getElementById("back-to-top").style.display = "none";
+            }
+        };
+    
+        document.getElementById("back-to-top").onclick = function(event) {
+            event.preventDefault();
+            window.scrollTo({ top: 0, behavior: "smooth" });
+        };
+    </script>
+
 {% endblock %}
 </body>
+
+<footer class="bg-black text-white text-center py-3 mt-5">
+    <p>&copy; 2024 NARTH VAD3R MERCH. All rights reserved.</p>
+    <a href="#top" class="btn btn-danger" id="back-to-top">
+        &#8593; Back to Top
+    </a>
+</footer>
+
 </html>
