--- a/static/css/base.css
+++ b/static/css/base.css
@@ -322,6 +322,11 @@ a.text-muted:hover {
     box-shadow: 0 4px 10px rgba(255, 0, 0, 0.7);
 }
 
+.card-body, .card-footer {
+    background-color: black;
+
+}
+
 .product-image {
     border-bottom: 2px solid #ff0000;
 }
@@ -413,18 +418,48 @@ input[name='q']::placeholder {
     color: #aab7c4;
 }
 
+/* ------- Footer ------- */
+footer {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    background-color: #000000;
+    color: white;
+    text-align: center;
+    padding: 15px 0;
+    z-index: 1000; 
+}
+
+#back-to-top {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    display: none;
+    background-color: #ff0000;
+    color: white;
+    border-radius: 50%;
+    font-size: 24px;
+    padding: 10px;
+    text-align: center;
+}
+
+#back-to-top:hover {
+    background-color: #d40000;
+}
+
+
 /* ------- toasts ------ */
 
 /* Toast Container */
 .toast {
-    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.7); /* Add a subtle shadow */
-    border: 2px solid #ff0000; /* Red border for the theme */
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.7);
+    border: 2px solid #ff0000;
 }
 
 /* Toast Header */
 .toast-header {
     font-family: "Lato", sans-serif;
-    font-size: 1rem; /* Adjust text size */
+    font-size: 1rem; 
 }
 
 /* Capper (top border indicator) */
