--- a/templates/allauth/account/signup.html
+++ b/templates/allauth/account/signup.html
@@ -22,7 +22,7 @@
                         {% if redirect_field_value %}
                             <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
                         {% endif %}
-                        <a class="btn btn-outline-black rounded-0" href="{% url 'account_login' %}">{% trans "Back to Login" %}</a>
+                        <a class="btn btn-outline-black rounded-0 text-red" href="{% url 'account_login' %}">{% trans "Back to Login" %}</a>
                         <button type="submit" class="btn btn-danger mt-3">{% trans "Sign Up" %}</button>
                     </form>
                 </div>
