--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -20,7 +20,7 @@
                 <a href="{% url 'products' %}?category=pullovers" class="dropdown-item">Hoodies &amp; Jumpers</a>
                 <a href="{% url 'products' %}?category=t-shirts" class="dropdown-item">Shirts</a>
                 <a href="{% url 'products' %}?category=jackets" class="dropdown-item">Jackets</a>
-                <a href="{% url 'products' %}?category=hoodies,jumpers,t-shirts,jackets" class="dropdown-item">All Clothing</a>
+                <a href="{% url 'products' %}?category=pullovers,t-shirts,jackets" class="dropdown-item">All Clothing</a>
             </div>
         </li>
 
