css issue fix attempt

--- a/staticfiles/css/base.css
+++ b/staticfiles/css/base.css
@@ -3,7 +3,7 @@
 
 /*-------- Misc --------*/
 body {
-    background-color: url('/media/red-lightning.jpg') no-repeat center center fixed !important;
+    background: url('/media/red-lightning.jpg') no-repeat center center fixed;
     background-size: cover;
     color: #ffffff;
     font-family: 'Lato';
@@ -57,6 +57,12 @@ header {
 }
 
 /* ------ Main ------*/
+
+body {
+    background-color: url('/media/red-lightning.jpg') no-repeat center center fixed; 
+    color: #fff; 
+    
+}
 
 a {
     color: #ff0000;
@@ -190,8 +196,16 @@ button.btn-red:hover {
     background-color: #222;
     padding: 15px;
     border-radius: 5px;
-}
+  }
 
+/* Footer (Optional) */
+footer {
+    background-color: #111;
+    color: #fff;
+    text-align: center;
+    padding: 20px 0;
+    border-top: 2px solid #ff0000; /* Red top border */
+}
 
 
 
@@ -419,10 +433,8 @@ footer {
     position: fixed;
     bottom: 0;
     width: 100%;
-    background-color: #111;
-    color: #fff;
-    text-align: center;
-    border-top: 2px solid #ff0000; /* Red top border */
+    background-color: #000000;
+    color: white;
     text-align: center;
     padding: 15px 0;
     z-index: 1000; 
