css issue fix attempt

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -3,7 +3,7 @@
 
 /*-------- Misc --------*/
 body {
-    background: url('/media/red-lightning.jpg') no-repeat center center fixed;
+    background-image: url('/media/red-lightning.jpg') no-repeat center center fixed;
     background-size: cover;
     color: #ffffff;
     font-family: 'Lato';
