Added aria label to search bar button after lighthouse testing

--- a/templates/base.html
+++ b/templates/base.html
@@ -104,7 +104,7 @@
                     <div class="input-group col-10 col-md-4 mx-auto search-icon">
                         <input class="form-control border-black rounded-0" type="text" name="q" placeholder="Looking for something?">
                         <div class="input-group-append">
-                            <button class="form-control btn btn-red border-red rounded-0" type="submit">
+                            <button class="form-control btn btn-red border-red rounded-0" type="submit" aria-label="Search">
                                 <i class="fa-brands fa-searchengin"></i>
                             </button>
                         </div>
